# schemas/openapi/api.yaml
@@ -17,6 +17,11 @@ paths:
             type: string
           required: false
 
+        - in: query
+          name: sort
+          schema:
+            type: string
+          required: false
 
       responses:
         200:
